<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/detail_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline3"
        tools:text="Detail" />

    <ImageView
        android:id="@+id/detail_image_view"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:contentDescription="@string/flower_image_content_description"
        app:srcCompat="@drawable/rose" />

    <TextView
        android:id="@+id/flower_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:text="@string/flower1_description" />

    <Button
        android:id="@+id/remove_flower_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/remove_this_flower" />
</LinearLayout>